--- a/migrate-posts-html-css/index.html
+++ b/migrate-posts-html-css/index.html
@@ -9,11 +9,11 @@
     <div class="modal">
       <header>
         <h1>Import Posts Manually</h1>
-        <button class="btn">x</button>
+        <button class="btn"><div class="btn-close-icon"></div></button>
       </header>
 
       <section>
-        <p>To finish importing the rest of your posts, add them manually.</p>
+        <p class="attention">To finish importing the rest of your posts, add them manually.</p>
 
         <p>Posts left to import:</p>
         <table>
