--- a/scheduling/index.html
+++ b/scheduling/index.html
@@ -21,7 +21,7 @@
       <span class="go-back">Main Menu</span>
       <span class="widget">BLOG (NEW)</span>
       <ul>
-        <li><a href="#">Posts</a></li>
+        <li class="active"><a href="#">Posts</a></li>
         <li><a href="#">Categories</a></li>
         <li><a href="#">Author Info</a></li>
       </ul>
