--- a/scheduling/index.html
+++ b/scheduling/index.html
@@ -10,7 +10,7 @@
     <img class="logo" src="images/wix.svg" alt="Wix logo">
     <span class="go-back">My Sites</span>
     <div class="user notifications">
-      <img src="images/notification-solid.png" alt="notifications pic">
+      <img src="images/bell-solid.svg" alt="notifications pic">
     </div>
     <img class="user profile-pic" src="images/profile.jpg" alt="Profile pic"></div>
   </nav>
@@ -19,7 +19,7 @@
 
     <nav class="sidebar">
       <span class="go-back">Main Menu</span>
-      <span class="widget">BLOG (NEW)</span>
+      <span class="widget-name">BLOG (NEW)</span>
       <ul>
         <li class="active"><a href="#">Posts</a></li>
         <li><a href="#">Categories</a></li>
