--- a/migrate-posts-html-css/index.html
+++ b/migrate-posts-html-css/index.html
@@ -44,7 +44,7 @@
         </table>
       </section>
 
-      <footer class="spacing-sides">
+      <footer>
         <button class="btn">Close</button>
       </footer>
     </div>
