--- a/flag-game/index.html
+++ b/flag-game/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="styles.css">
-  <title>Flag Game</title>
-</head>
-<body>
-  <div id="root"></div>
-  <script src="render.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+    <title>Flag Game</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script src="render.js"></script>
+    <script src="gameLogic.js"></script>
+    <!-- call game logic and render -->
+    <script src="main.js"></script>
+  </body>
 </html>
