--- a/flag-game/index.html
+++ b/flag-game/index.html
@@ -10,6 +10,7 @@
     <script src="render.js"></script>
     <script src="gameLogic.js"></script>
     <!-- call game logic and render -->
+    <script src="bot.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
